[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=4]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )
game_scene = ExtResource( 4 )

[node name="FocusControl" type="Control" parent="."]
focus_neighbour_left = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_neighbour_top = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_neighbour_right = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_neighbour_bottom = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_next = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_previous = NodePath("../CenterContainer/VBoxContainer/StartButton")
focus_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 432.0
margin_top = 350.0
margin_right = 1488.0
margin_bottom = 730.0
theme = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1056.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "Don't Change Horses in Midstream!"
align = 1

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 1056.0
margin_bottom = 84.0
align = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 272.0
margin_top = 104.0
margin_right = 784.0
margin_bottom = 232.0
rect_min_size = Vector2( 512, 128 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Start Game"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 272.0
margin_top = 252.0
margin_right = 784.0
margin_bottom = 380.0
rect_min_size = Vector2( 512, 128 )
focus_neighbour_top = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../StartButton")
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
